lib_LIBRARIES=libbench.a

libbench_a_SOURCES=acopy.c allocate.c aset.c bench-main.c bench-user.h	\
bench.h cacopy.c can-do.c caset.c deallocate.c getopt-utils.c getopt.c	\
getopt.h getopt1.c info.c main.c mflops.c problem.c report.c speed.c	\
timer.c util.c verify.c zero.c ccopy-from.c ccopy-to.c cascale.c	\
caadd.c casub.c pow2.c log2.c ovtpvt.c copy-c2r.c copy-c2h.c		\
copy-h2c.c copy-r2c.c copy-h2c-1d-packed.c copy-c2h-1d-packed.c		\
ascale.c accopy-from.c  accopy-to.c
