lib_LIBRARIES=libbench.a

libbench_a_SOURCES=accopy-from.c accopy-to.c acopy.c allocate.c		\
ascale.c aset.c bench-main.c bench-user.h bench.h caadd.c cacopy.c	\
can-do.c cascale.c caset.c casub.c ccopy-from.c ccopy-to.c		\
copy-c2h-1d-fftpack.c copy-c2h-1d-packed.c copy-h2c-1d-unpacked-ri.c	\
copy-c2h-1d-unpacked.c copy-c2h-1d-unpacked-ri.c copy-c2h.c copy-c2r.c	\
copy-h2c-1d-fftpack.c copy-h2c-1d-packed.c copy-h2c-1d-unpacked.c	\
copy-h2c.c copy-r2c.c deallocate.c getopt-utils.c getopt.c getopt.h	\
getopt1.c info.c log2.c main.c mflops.c ovtpvt.c pow2.c prime.c		\
problem.c report.c speed.c timer.c util.c verify.c zero.c copy-c2ri.c	\
copy-ri2c.c unnormalize.c
