EXTRA_DIST = benchmark collect insnl.pl mktbl sort-by-problem.pl	\
sysinfo writeinfo group-by-problem.pl grep-p2.pl grep-rank.pl		\
run.ab-initio run.glauke run.itanium run.itanium.ecc run.solaris	\
run.wetelectron

benchmark: all
	@echo "nothing to benchmark"

accuracy: all
	@echo "nothing to benchmark"

fftinfo: all
	@echo "nothing to benchmark"


