EXTRA_DIST = benchmark collect insnl.pl mktbl sort-by-problem.pl	\
sysinfo writeinfo group-by-problem.pl sort-by-problem.pl grep-p2.pl	\
grep-np2.pl grep-rank.pl grace-plot.pl standard-plots.sh plot-title.sh	\
run.ab-initio run.glauke run.solaris run.emc2

benchmark: all
	@echo "nothing to benchmark"

accuracy: all
	@echo "nothing to benchmark"

fftinfo: all
	@echo "nothing to benchmark"


